--- a/src/app/halaman-utama.html
+++ b/src/app/halaman-utama.html
@@ -8,9 +8,11 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <div style="text-align: center">
-  <h1>
-   SISTEM INFORMASI UAD
-  </h1>
+  
+   <h1> SISTEM INFORMASI UAD </h1>
+   <h2> shofiyah salamah </h2>
+   <h3> 1800016165 </h3>
+  
   <img width="90px" alt="Angular Logo" src="assets/uad.png">
 </div>
 <ul>
